...
                                            <outlet property="delegate" destination="BYZ-38-t0r" id="gUp-kO-XEY"/>
                                        </connections>
                                    </pickerView>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fAS-1B-eGr">
                                        <rect key="frame" x="0.0" y="370" width="355" height="30"/>
                                        <color key="backgroundColor" red="0.0" green="0.1857804656" blue="0.30624568460000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <state key="normal" title="Confirm">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
                                        <connections>
                                            <segue destination="5dv-t4-1Pd" kind="show" id="dxq-ZF-pDb"/>
                                        </connections>
                                    </button>
...
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iyl-gG-QwE">
                                <rect key="frame" x="0.0" y="318" width="375" height="31"/>
                                <state key="normal" title="Generate Course Schedule">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <segue destination="M8T-Sv-1u1" kind="show" id="OUS-HB-HHQ"/>
                                </connections>
                            </button>
...
                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="U7L-yv-Mia">
                                        <rect key="frame" x="0.0" y="108" width="355" height="30"/>
                                        <color key="backgroundColor" red="0.0" green="0.1857804656" blue="0.30624568460000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <state key="normal" title="Select">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
                                        <connections>
                                            <segue destination="4wj-Ye-cp8" kind="show" id="O83-lr-S81"/>
                                        </connections>
                                    </button>
...
                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <button key="tableFooterView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="OwF-p9-OTP">
                            <rect key="frame" x="0.0" y="72" width="375" height="44"/>
                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                            <state key="normal" title="Done"/>
                            <connections>
                                <segue destination="5dv-t4-1Pd" kind="show" id="j02-Td-4Lx"/>
                            </connections>
                        </button>
                        <prototypes>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" id="iLt-et-seN">
...
